[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/crosshair.shader" type="Shader" id=2]
[ext_resource path="res://Player/HUD.gd" type="Script" id=3]
[ext_resource path="res://Menu/Theme.tres" type="Theme" id=4]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[sub_resource type="SphereShape" id=3]
margin = 1.0
radius = 2.0

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 2 )
shader_param/center_enabled = true
shader_param/legs_enabled = false
shader_param/inverted = false
shader_param/color = Plane( 1, 1, 1, 1 )
shader_param/center_radius = 0.001
shader_param/width = 0.001
shader_param/len = 0.01
shader_param/spacing = 0.01
shader_param/spread = 1.0

[node name="Player" type="KinematicBody" groups=["Player"]]
collision_layer = 2
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
volume_db = -30.0
pitch_scale = 0.25
mix_target = 2

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
pause_mode = 2
volume_db = -20.0
pitch_scale = 0.25
mix_target = 2

[node name="Body" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 1 )

[node name="PickupArea" type="Area" parent="."]
collision_layer = 32
collision_mask = 8

[node name="CollisionShape" type="CollisionShape" parent="PickupArea"]
shape = SubResource( 3 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 0 )

[node name="Camera" type="Camera" parent="Head"]

[node name="OmniLight" type="OmniLight" parent="Head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0 )

[node name="Offset" type="Position3D" parent="Head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.75 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 3 )

[node name="FPS" type="Label" parent="HUD"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Time" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.0
margin_right = 50.0
margin_bottom = 50.0
align = 1
valign = 1

[node name="Gems" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 50.0
align = 1
valign = 2

[node name="CrossHair" type="ColorRect" parent="HUD"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="DeathSreen" type="CenterContainer" parent="HUD"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )

[node name="VBoxContainer2" type="VBoxContainer" parent="HUD/DeathSreen"]
margin_left = 540.0
margin_top = 260.0
margin_right = 740.0
margin_bottom = 460.0
rect_min_size = Vector2( 200, 200 )

[node name="Label" type="Label" parent="HUD/DeathSreen/VBoxContainer2"]
margin_right = 200.0
margin_bottom = 22.0
text = "ded"
align = 1

[node name="PlayButton" type="Button" parent="HUD/DeathSreen/VBoxContainer2"]
margin_top = 26.0
margin_right = 200.0
margin_bottom = 48.0
text = "Play"

[node name="MenuButton" type="Button" parent="HUD/DeathSreen/VBoxContainer2"]
margin_top = 52.0
margin_right = 200.0
margin_bottom = 74.0
text = "Main Menu"

[node name="QuitButton" type="Button" parent="HUD/DeathSreen/VBoxContainer2"]
margin_top = 78.0
margin_right = 200.0
margin_bottom = 100.0
text = "Quit"

[node name="LevelUp" type="CenterContainer" parent="HUD"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )

[node name="VBoxContainer2" type="VBoxContainer" parent="HUD/LevelUp"]
margin_left = 515.0
margin_top = 260.0
margin_right = 764.0
margin_bottom = 460.0
rect_min_size = Vector2( 200, 200 )

[node name="Label" type="Label" parent="HUD/LevelUp/VBoxContainer2"]
margin_right = 249.0
margin_bottom = 22.0
text = "Level Up!"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/LevelUp/VBoxContainer2"]
margin_top = 26.0
margin_right = 249.0
margin_bottom = 48.0

[node name="UpFireRate" type="Button" parent="HUD/LevelUp/VBoxContainer2/HBoxContainer"]
margin_right = 80.0
margin_bottom = 22.0
text = "+ Fire Rate"

[node name="UpDamage" type="Button" parent="HUD/LevelUp/VBoxContainer2/HBoxContainer"]
margin_left = 84.0
margin_right = 160.0
margin_bottom = 22.0
text = "+ Damage"

[node name="UpProjectile" type="Button" parent="HUD/LevelUp/VBoxContainer2/HBoxContainer"]
margin_left = 164.0
margin_right = 249.0
margin_bottom = 22.0
text = "+ Projectile"

[connection signal="body_entered" from="PickupArea" to="." method="_on_PickupArea_body_entered"]
[connection signal="pressed" from="HUD/DeathSreen/VBoxContainer2/PlayButton" to="HUD" method="_on_PlayButton_pressed"]
[connection signal="pressed" from="HUD/DeathSreen/VBoxContainer2/MenuButton" to="HUD" method="_on_MenuButton_pressed"]
[connection signal="pressed" from="HUD/DeathSreen/VBoxContainer2/QuitButton" to="HUD" method="_on_QuitButton_pressed"]
[connection signal="pressed" from="HUD/LevelUp/VBoxContainer2/HBoxContainer/UpFireRate" to="." method="_on_UpFireRate_pressed"]
[connection signal="pressed" from="HUD/LevelUp/VBoxContainer2/HBoxContainer/UpDamage" to="." method="_on_UpDamage_pressed"]
[connection signal="pressed" from="HUD/LevelUp/VBoxContainer2/HBoxContainer/UpProjectile" to="." method="_on_UpProjectile_pressed"]
